test/files_test/errors/lambda_too_few_args.scm
; Test: Too few arguments to lambda call - should return exit code 84
(define add (lambda (a b) (+ a b)))
(add 1)
